--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-scikit-learn==1.2.2
-mlflow==2.3.0
-fastapi==0.95.0
-uvicorn==0.21.1
-transformers==4.28.1
-pandas==1.5.3
+mlflow<3,>=2.3
+cloudpickle==2.2.1
+lz4==4.3.2
 numpy==1.24.2
-matplotlib==3.7.1
-torch==2.0.1  # Necesario para Hugging Face
+psutil==5.9.0
+scikit-learn==1.2.2
+scipy==1.11.4
